tests/snapshots/examples_fixtures/errors__immutable_reassignment.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/immutable_reassignment.flx
== compile ==
failed (compile)
== diagnostics ==
error[E002]: Immutable Binding

Cannot reassign to immutable variable `x`.

  examples/errors/immutable_reassignment.flx:7:1
  |
7 | x = 20
  | ^^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_x = ...`).


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/errors/immutable_reassignment.flx:8:1
  |
8 | print(x)
  | ^^^^^^^^
  | -------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/errors/immutable_reassignment.flx:8:1
  |
8 | print(x)
  | ^^^^^^^^
  | -------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
