tests/snapshots/examples_fixtures/errors__invalid_float_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_float_error.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


Error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


Error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^
  | -------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 3 errors.
== stdout ==
<not executed>
